# sheet

./: README.md  TODO.md
backend/: Cargo.toml  compose.yaml  go.mod  main.go
backend/.sqlx/: query-2178347bed54c54ff2fdb9fc35cf92be181fc321ad21e2e75fcd5cadf7ccfb89.json  query-21a0a584db3b2d6b7a5836f94d77a41a253888aa511597e66295943439dd2cb8.json  query-2339e4319cb5d481e69f7a0b54188d651368a4f9b28df1460dd7496a19e14d69.json  query-2b5ebb5a9bca46d48487498278e9074dc91122d75512ae9735c53f766224f30c.json  query-2db9297af5988ba02fa8166063311578bc76fb7dff902995633fa091aeb69124.json  query-47ea124038b4b9a8353e68203fa3768d36aa5f348037e2f839914aad972d5cb8.json  query-93ed8cf8716f3f32f37bb32ce6f935b01050bc5efa80bc13a41a53cc661d1615.json  query-9d763c98c7da0ecf05ef89038cb16069ec6be5b259e827f9ff6748b5fb42ec6d.json  query-ada87ec5a010445fe8b7ea4dfa7a5c24e96b916f2d0ebaa23187b00b0f9b5d8a.json  query-b92f550eb56d678576b534063047623e6f32e4d43a4d88c016bf867fa07ff62b.json  query-c162ffdd9e9d2e562d5799bc82e790459d9201df005d8dabfba02bf9dbf7dce0.json  query-c241bdde65b882fec742ca90b5b3f8af07d4a91c3882ebe1931e05a561129a4e.json  query-eac7a6ace441d8f6f1b3292bc7dc1d5ee803866fe507e865a85721b08f8d8cc6.json  query-ed65f82bd02ed0bb0b19466437cf58f3585377018791fbe623d94b32a14a66ca.json  query-f06e6a6e4e41074992cb0d144e4d15bfaed22b6d4d84609dd3de976254f651f4.json  query-fb1158ae5e8c930b8290d3b9dfbabbc76a610176f0f750389a4fb726eb97848c.json
backend/migrations/: 20250522044956_create_tables.down.sql  20250522044956_create_tables.up.sql
backend/src/: config.rs  constants.rs  lib.rs  main.rs
(+32 files in other folders)
