[package]
name = "sheeter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4" 
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
clap = { version = "4.5.38", features = ["derive", "env"] }
tower-http = { version = "0.6.4", features = ["cors"] }
