[package]
name = "sheeter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4" 
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
clap = { version = "4.5.38", features = ["derive", "env"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "time", "uuid" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
thiserror = "2.0.12"
